--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "react-native": "0.73.4",
     "react-native-linear-gradient": "^2.8.3",
     "react-native-safe-area-context": "4.8.2",
-    "react-native-screens": "~3.29.0"
+    "react-native-screens": "~3.29.0",
+    "expo-dev-client": "~3.3.10"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
