--- a/eas.json
+++ b/eas.json
@@ -13,6 +13,9 @@
       "android": {
         "buildType": "apk",
         "gradleCommand": ":app:assembleRelease"
+      },
+      "env": {
+        "EXPO_PUBLIC_API_KEY": "701bae577a262e4406a9a09430d701ed"
       }
     },
     "production": {}
