--- a/app.json
+++ b/app.json
@@ -7,13 +7,11 @@
     "icon": "./assets/images/logo.png",
     "userInterfaceStyle": "light",
     "splash": {
-      "image": "./assets/images/novo-splash.jpg",
+      "image": "./assets/images/splash-dahora.png",
       "resizeMode": "contain",
       "backgroundColor": "#00000"
     },
-    "assetBundlePatterns": [
-      "**/*"
-    ],
+    "assetBundlePatterns": ["**/*"],
     "ios": {
       "supportsTablet": true
     },
@@ -24,9 +22,7 @@
       },
       "package": "com.kaueacenar.filmesflix"
     },
-    "plugins": [
-      "expo-font"
-    ],
+    "plugins": ["expo-font"],
     "extra": {
       "eas": {
         "projectId": "566291b0-2d5a-47f9-bf85-1fbee91ca116"
