--- a/package.json
+++ b/package.json
@@ -10,17 +10,17 @@
   },
   "dependencies": {
     "@expo/vector-icons": "^14.0.0",
-    "@react-native-async-storage/async-storage": "^1.22.3",
+    "@react-native-async-storage/async-storage": "1.21.0",
     "@react-navigation/native": "^6.1.12",
     "@react-navigation/native-stack": "^6.9.20",
     "axios": "^1.6.7",
     "expo": "~50.0.13",
     "expo-font": "~11.10.2",
-    "expo-linear-gradient": "~12.7.1",
+    "expo-linear-gradient": "~12.7.2",
     "expo-splash-screen": "~0.26.4",
     "expo-status-bar": "~1.11.1",
     "react": "18.2.0",
-    "react-native": "0.73.4",
+    "react-native": "0.73.5",
     "react-native-linear-gradient": "^2.8.3",
     "react-native-safe-area-context": "4.8.2",
     "react-native-screens": "~3.29.0",
